/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.sabot.kernel.proto;

option java_package = "com.dremio.sabot.kernel.proto";
option java_outer_classname = "QueryReflectionProtobuf";

option optimize_for = SPEED;


message DisjointFilterExplanation {
  optional string filter = 1;
}

message FilterOverSpecifiedExplanation {
  optional string filter = 1;
}

message FieldMissingExplanation{
  optional string column_name = 1;
  optional int32 column_index = 2;
}

enum ReflectionExplanationType {
  DISJOINT_FILTER = 1;
  FILTER_OVER_SPECIFIED = 2;
  FIELD_MISSING = 3;
}

message ReflectionExplanation {
  //the current proto stuff generators we use does not support "oneof"
  optional ReflectionExplanationType explanation = 1;
  optional DisjointFilterExplanation disjoint_filter = 2;
  optional FilterOverSpecifiedExplanation filter_over_specified = 3;
  optional FieldMissingExplanation field_missing = 4;
}
